<resources>
    <string name="app_name">ECarChargeInfo</string>

    <string name="search">EX)서울특별시 서초구</string>
    <string name="combo">DC콤보</string>
    <string name="demo">DC차데모</string>
    <string name="ac">AC3상</string>
    <string name="slow">완속</string>
    <string name="charge_speed">속도</string>
    <string name="search_button">검색</string>


    <string name="denied_permission">권한이 거부되었습니다. 다시실행해주세요"</string>


    <string name="info_title">명칭</string>
    <string name="info_address">주소</string>
    <string name="info_available">충전가능</string>
    <string name="info_fast">급속</string>
    <string name="info_slwo">완속</string>
    <string name="info_free">무료</string>
    <string name="info_24h">24시</string>
    <string name="info_cost">유료</string>
    <string name="info_navigation">안내시작</string>
    <string name="info_charger">충전기 정보</string>
    <string name="info_can_charge">충전가능</string>
    <string name="info_cant_charge">충전불가능</string>
    <string name="info_last_charge_time">0시간 0분 전 시작</string>

    <string name="now_location">현 위치</string>


    <string name="info_tabbar_title">충전소 정보</string>
    <string name="info_detail_company">사업자명</string>
    <string name="info_detail_time">운영시간</string>
    <string name="info_detail_phone">고객센터</string>
    <string name="info_detail_parking_info">주차정보</string>
    <string name="info_detail_addr">상세위치</string>
    <string name="complete_copy">주소가 복사되었습니다.</string>
    <string name="incomplete_copy">주소가 복사되지 않았습니다.</string>
    <string name="test">test</string>
    <string name="info_charger_info_title">충전기 정보</string>
    <string name="info_navigation_button">길안내</string>
    <string name="info_charger_type_count">급속%1$d / 완속%2$d</string>

</resources>
