<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="inputs"
            type="com.example.ecarchargeinfo.info.presentation.input.InfoInputs" />

        <variable
            name="chargeInfo"
            type="com.example.ecarchargeinfo.retrofit.model.charger.ChargerInfo" />

        <variable
            name="vm"
            type="com.example.ecarchargeinfo.info.presentation.viewmodel.InfoViewModel" />

        <variable
            name="ac"
            type="com.example.ecarchargeinfo.info.presentation.ui.InfoActivity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".info.presentation.ui.InfoActivity">

        <TextView
            android:id="@+id/tv_info_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/info_tabbar_title"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_baseline_arrow_back_ios_24"
            app:layout_constraintBottom_toBottomOf="@+id/tv_info_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_info_title" />


        <View
            android:id="@+id/view_tabbar"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="16dp"
            android:background="@color/empty_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_info_title" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="16dp"
            android:ellipsize="end"
            android:text="@{chargeInfo.csNm}"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_tabbar"
            tools:text="@string/info_title" />

        <TextView
            android:id="@+id/tv_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@{vm.distanceEvent.toString()}"
            android:textColor="@color/text_blue"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/tv_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_title"
            tools:text="1.8km" />

        <ImageButton
            android:id="@+id/ib_copy_address"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginEnd="16dp"
            android:background="@android:color/transparent"
            android:onClick="@{() -> inputs.onCopyClick(chargeInfo.addr.toString())}"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_baseline_content_copy_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_address" />

        <TextView
            android:id="@+id/tv_detail_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/info_detail_addr"
            android:textColor="@color/text_blue"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/tv_distance"
            app:layout_constraintTop_toBottomOf="@+id/tv_distance" />

        <TextView
            android:id="@+id/tv_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:ellipsize="none"
            android:text="@{chargeInfo.addr}"
            android:textColor="@color/black"
            app:layout_constraintEnd_toStartOf="@+id/ib_copy_address"
            app:layout_constraintStart_toEndOf="@+id/tv_detail_info"
            app:layout_constraintTop_toTopOf="@+id/tv_detail_info"
            tools:text="@string/info_address" />

        <Button
            android:id="@+id/btn_navigation"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/text_blue"
            android:onClick="@{() -> inputs.onNavigationClick(chargeInfo.lat, chargeInfo.longi)}"
            android:text="@string/info_navigation_button"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/ib_copy_address"
            app:layout_constraintStart_toStartOf="@+id/tv_detail_info"
            app:layout_constraintTop_toBottomOf="@+id/tv_address" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="8dp"
            android:background="@color/empty_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_navigation" />

        <TextView
            android:id="@+id/tv_charger_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/info_charger_info_title"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view" />

        <TextView
            android:id="@+id/tv_charger_type_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_charger_info"
            app:layout_constraintStart_toEndOf="@+id/tv_charger_info"
            tools:text="급속2 / 완속1" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/info_rc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_charger_info" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="16dp"
            android:background="@color/empty_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/info_rc" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
