<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="kotlin.jvm.functions.Function1" />

        <import type="com.example.ecarchargeinfo.main.domain.entity.MainSearchFilterSpeedEntity" />

        <import type="kotlin.Unit" />

        <variable
            name="searchFilterEntity"
            type="com.example.ecarchargeinfo.main.domain.entity.MainSearchFilterEntity" />

        <variable
            name="chargeDetailEntity"
            type="com.example.ecarchargeinfo.map.domain.entity.ChargerDetailEntity" />

        <variable
            name="inputs"
            type="com.example.ecarchargeinfo.main.presentation.input.MainInputs" />

        <variable
            name="setRange"
            type="Function1&lt;MainSearchFilterSpeedEntity, Unit>" />

        <variable
            name="vm"
            type="com.example.ecarchargeinfo.main.presentation.viewmodel.MainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MapFragment">

        <LinearLayout
            android:id="@+id/lay_appbar"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/layout_background"
                android:hint="@string/search"
                android:paddingLeft="12dp"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="30dp">

                    <Button
                        android:id="@+id/btn_combo"
                        background="@{searchFilterEntity.combo}"
                        android:layout_width="70dp"
                        android:layout_height="match_parent"
                        android:background="@drawable/custom_button_true"
                        android:lineSpacingExtra="2dp"
                        android:onClick="@{() -> inputs.onComboClick()}"
                        android:text="@string/combo"
                        android:textColor="@color/white"
                        android:textSize="12sp"
                        app:layout_constraintEnd_toStartOf="@id/btn_demo"
                        app:layout_constraintStart_toStartOf="parent" />

                    <Button
                        android:id="@+id/btn_demo"
                        background="@{searchFilterEntity.demo}"
                        android:layout_width="70dp"
                        android:layout_height="match_parent"
                        android:background="@drawable/custom_button_true"
                        android:lineSpacingExtra="2dp"
                        android:onClick="@{() -> inputs.onDemoClick()}"
                        android:text="@string/demo"
                        android:textColor="@color/white"
                        android:textSize="12sp"
                        app:layout_constraintEnd_toStartOf="@id/btn_ac"
                        app:layout_constraintStart_toEndOf="@id/btn_combo" />

                    <Button
                        android:id="@+id/btn_ac"
                        background="@{searchFilterEntity.ac}"
                        android:layout_width="70dp"
                        android:layout_height="match_parent"
                        android:background="@drawable/custom_button_true"
                        android:lineSpacingExtra="2dp"
                        android:onClick="@{() -> inputs.onACClick()}"
                        android:text="@string/ac"
                        android:textColor="@color/white"
                        android:textSize="12sp"
                        app:layout_constraintEnd_toStartOf="@id/btn_slow"
                        app:layout_constraintStart_toEndOf="@id/btn_demo" />

                    <Button
                        android:id="@+id/btn_slow"
                        background="@{searchFilterEntity.slow}"
                        android:layout_width="70dp"
                        android:layout_height="match_parent"
                        android:background="@drawable/custom_button_false"
                        android:lineSpacingExtra="2dp"
                        android:onClick="@{() -> inputs.onSlowClick()}"
                        android:text="@string/slow"
                        android:textColor="@color/white"
                        android:textSize="12sp"
                        app:layout_constraintEnd_toStartOf="@id/btn_speed"
                        app:layout_constraintStart_toEndOf="@id/btn_ac" />

                    <Button
                        android:id="@+id/btn_speed"
                        background="@{searchFilterEntity.speedEntity.speed}"
                        android:layout_width="70dp"
                        android:layout_height="match_parent"
                        android:background="@drawable/custom_button_false"
                        android:lineSpacingExtra="2dp"
                        android:onClick="@{() -> inputs.onSpeedClick()}"
                        android:text="@string/charge_speed"
                        android:textColor="@color/white"
                        android:textSize="12sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/btn_slow" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>


        </LinearLayout>

        <com.google.android.gms.maps.MapView
            android:id="@+id/mapview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lay_appbar" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            visible="@{chargeDetailEntity.visible}"
            android:layout_height="100dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@color/white"
            >
            <ImageView
                android:id="@+id/iv_detail_image"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="12dp"
                android:layout_marginStart="16dp"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:src="@drawable/volt"/>

            <TextView
                android:id="@+id/tv_detail_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="12"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@+id/iv_detail_image"
                app:layout_constraintTop_toTopOf="@+id/iv_detail_image"
                android:layout_marginStart="8dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="123123"
                android:textSize="14sp"
                android:layout_marginTop="4dp"
                app:layout_constraintStart_toStartOf="@+id/tv_detail_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_detail_title" />



        </androidx.constraintlayout.widget.ConstraintLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
